<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tap_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tap_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_total" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tap_damage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_damage" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tap_comparison"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_comparison" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_matches"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />
</LinearLayout>

