<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchActivity">


    <ImageView
        android:id="@+id/icon_summoner"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/image_border"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="@+id/level_summoner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <ImageView
        android:id="@+id/border_summoner"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="10dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="@+id/level_summoner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/name_summoner"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:textColor="@color/firsnal"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/reset_summoner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toEndOf="@+id/icon_summoner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <ImageButton
        android:id="@+id/like_summoner"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/like_off"
        app:layout_constraintBottom_toBottomOf="@+id/name_summoner"
        app:layout_constraintEnd_toEndOf="@+id/name_summoner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/name_summoner"
        app:layout_constraintTop_toTopOf="@+id/name_summoner"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/reset_summoner"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:background="@drawable/image_border"
        android:onClick="refrashSummonerSearch"
        android:text="전적갱신"
        android:textColor="@color/firsnal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toEndOf="@+id/icon_summoner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/level_summoner"
        android:layout_width="40dp"
        android:layout_height="17.5dp"
        android:background="@color/firsnal"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="12.5dp"
        app:layout_constraintBottom_toTopOf="@+id/image_match"
        app:layout_constraintEnd_toStartOf="@+id/reset_summoner"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <ImageView
        android:id="@+id/image_league"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/editTextBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/image_match"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_league">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/solo_league"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:src="@drawable/emblem_unranked" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/solo_name"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7.5dp"
                    android:gravity="center"
                    android:textSize="12.5dp"
                    android:text="@string/solo_lank"
                    android:textColor="@color/firsnal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/solo_tier"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lank_tier"
                    android:textSize="10.5dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/solo_point"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lank_point"
                    android:textSize="10.5dp" />

                <TextView
                    android:id="@+id/solo_kda"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lank_kda"
                    android:textSize="10.5dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/team_league"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:src="@drawable/emblem_unranked" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_name"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7.5dp"
                    android:gravity="center"
                    android:textSize="12.5dp"
                    android:text="@string/team_lank"
                    android:textColor="@color/firsnal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_tier"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lank_tier"
                    android:textSize="10.5dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_point"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lank_point"
                    android:textSize="10.5dp" />

                <TextView
                    android:id="@+id/team_kda"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lank_kda"
                    android:textSize="10.5dp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/image_match"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="?attr/editTextBackground"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_match">

        <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
            android:id="@+id/swipe_match"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_match"
            app:layout_constraintVertical_bias="1.0">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/view_match"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

        </com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
